unpackaged/main/default/objects/Deal_Expert__c/fields/Deal__c.field-meta.xml
<CustomField>
    <fullName>Deal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deal</label>
    <referenceTo>Pipeline__c</referenceTo>
    <relationshipLabel>Deal Experts</relationshipLabel>
    <relationshipName>Deal_Experts</relationshipName>
    <type>Lookup</type>
</CustomField>