unpackaged/main/default/objects/Deal_Expert__c/fields/Deal_Expert__c.field-meta.xml
<CustomField>
    <fullName>Deal_Expert__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deal Expert</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Deal Experts</relationshipLabel>
    <relationshipName>Deal_Experts</relationshipName>
    <type>Lookup</type>
</CustomField>