unpackaged/main/default/objects/Deal_Expert__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Considering</fullName>
            </value>
            <value>
                <fullName>In-Conversation</fullName>
            </value>
            <value>
                <fullName>Negotiation</fullName>
            </value>
            <value>
                <fullName>Signed Up</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>